--- a/helloworld.html
+++ b/helloworld.html
@@ -5,6 +5,7 @@
     <title>Hello React!</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
+    <script type="text/jsx" src="src/helloworld.js"></script>
   </head>
   <body>
     <div id="example"></div>
